# advent-of-code

./: .pre-commit-config.yaml  pyproject.toml
2024/day_01/: solution.py
2025/day_01/: cheating.py  input_small.txt  solution.py
2025/day_02/: solution.py
2025/day_03/: solution.py
2025/day_04/: solution.py
2025/day_05/: solution.py
